# kuka_rsi3_server

./: .gitignore  CMakeLists.txt  README.md  package.xml  plot.sce
RSI/: Painter_RSI.src  Painter_RSI.xml  Send_MSG.xml
config/: CommunicationClientSetting.yaml  settings.yaml
include/kuka_rsi3/: CommandComunication.hpp  CommunicationClient.hpp  DataTypes.hpp  Params.hpp  TrajectoryGenerator.hpp
include/utils/: PrettyPrint.hpp
launch/: CommunicationClient.launch
src/: CommandClient.cpp  CommunicationClient.cpp  RSI_Client.py  TrajectoryTest.cpp  boost_UDPSocket.cpp  c_UDPSocket.cpp  communication.cpp
